CI project Assignment 1-2 (first 4 pages)

--- a/HTML/forgot-password/forgot_password.css
+++ b/HTML/forgot-password/forgot_password.css
@@ -6,7 +6,7 @@
 }
 body
 {
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .create-account-link-1{
@@ -50,7 +50,7 @@ body
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(rgba(255, 255, 255, 0.018),rgba(0, 0, 0, 0.644));
+    background-image: linear-gradient(rgba(255, 255, 255, 0.018),rgba(0, 0, 0, 0.744));
 }
 @media screen and (max-width : 992px) {
     body
@@ -112,6 +112,10 @@ body
 
     .description{
         font-size: 0.8rem;
+    }
+
+    .login-detail{
+        padding: 1rem 2rem;
     }
 }
 
