reset password page and registration page in mvc

--- a/HTML/Reset-Password/reset_password.css
+++ b/HTML/Reset-Password/reset_password.css
@@ -53,6 +53,12 @@ body
     height: 100%;
     background-image: linear-gradient(rgba(255, 255, 255, 0.018),rgba(0, 0, 0, 0.644));
 }
+
+
+.nclr{
+    color: #414141;
+    font-size:small;
+}  
 @media screen and (max-width : 992px) {
     body
     {
