--- a/MVC/Views/Home/ForgotPassword.cshtml
+++ b/MVC/Views/Home/ForgotPassword.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -99,7 +99,7 @@
                                        id="exampleInputEmail1" aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
-                                <button type="submit" class="btn btn-outline-warning mt-4">Reset my Passsword</button>
+                                <button type="submit" class="btn btn-outline-warning mt-4" asp-controller="Home" asp-action="ReSetPassword">Reset my Passsword</button>
                                 <!-- <div>
                                     <p class="text-center mt-3">Login</p>
                                 </div> -->
