--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -109,7 +109,7 @@
                                 <div class="text-center mt-2">
                                     <div class="create-account-link-1">
                                         <span>Don't have an account?</span>
-                                        <a class="crt-acc" href="../Registration/registration.html"> Create an account</a>
+                                        <a class="crt-acc" asp-controller="Home" asp-action="Registration"> Create an account</a>
                                     </div>
                                     <!-- <div class="create-account-link-2">
                                     <div class="mt-3 text-center">
@@ -121,7 +121,7 @@
 
                                     </div> -->
 
-                                    <div class=" text-center mt-5">
+                                    <div class=" text-center mt-5 privacy">
                                         <p>Privacy Policy</p>
                                     </div>
                                 </div>
