--- a/HTML/login/login.css
+++ b/HTML/login/login.css
@@ -11,7 +11,7 @@ body
 
 .create-account-link-1{
     /* display: flex; */
-    
+    color: #414141;
 }
 
 .crt-acc{
@@ -39,6 +39,7 @@ body
 .forgot-pswd a{
     text-decoration: none;
     color: #414141;
+    font-size: medium;
 }
 
 .title{
@@ -53,6 +54,10 @@ body
     height: 100%;
     background-image: linear-gradient(rgba(255, 255, 255, 0.018),rgba(0, 0, 0, 0.644));
 }
+.privacy{
+    color: #414141;
+}
+
 @media screen and (max-width : 992px) {
     body
     {
