--- a/MVC/Views/Home/ReSetPassword.cshtml
+++ b/MVC/Views/Home/ReSetPassword.cshtml
@@ -1,17 +1,17 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Reset Password</title>
 
-    <link rel="shortcut icon" href="../CI Platform Assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="~/Images/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../login/login.css">
+    <link rel="stylesheet" href="~/css/ReSetPassword.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
         integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
@@ -23,7 +23,7 @@
         <div class="row ">
             <div class="custom-slider col-lg-8 col-md-12 col-sm-12 col-xs-12">
                 <div class=" img-container  ">
-                    <img src="/CI Platform Assets/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                    <img src="~/Images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
                         class="img-fluid">
 
                     <div class="linear-grad"></div>
@@ -42,8 +42,8 @@
                 </div>
 
                 <div class=" img-container  ">
-                    <img src="/CI Platform Assets/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                        class="img-fluid">
+                    <img src="~/Images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                         class="img-fluid">
 
                     <div class="linear-grad"></div>
                     <div class="poster-content mb-5 ">
@@ -61,8 +61,9 @@
                 </div>
 
                 <div class=" img-container  ">
-                    <img src="/CI Platform Assets/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                        class="img-fluid">
+                    <img src="~/Images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                         class="img-fluid">
+
 
                     <div class="linear-grad"></div>
                     <div class="poster-content mb-5 ">
@@ -87,34 +88,27 @@
                     <div class="col-12 col-lg-9 col-md-9 col-sm-9 col-xs-9">
                         <form>
                             <div class="mb-3 ">
-                                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1"
+                                <h4 class="text-center">New Password</h4>
+                                <p class="text-center mt-2 nclr">
+                                    Please enter a new password in the fields below.
+                                </p>
+
+                                <label for="exampleInputEmail1" class="form-label">New Passsword</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1"
                                     aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                                <button type="submit" class="btn btn-outline-warning mt-4">Login</button>
+                                <label for="exampleInputPassword1" class="form-label">Confirm New Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword2">
+
+                                <button type="submit" class="btn btn-outline-warning mt-4">Change Password</button>
                                 <div class="text-center mt-3 forgot-pswd">
-                                    <a href="../forgot-password/forgot_password.html">Lost your password?</a> 
+                                    <a asp-controller="Home" asp-action="Index" >Login</a> 
                                 </div>
 
-                                <div class="text-center mt-2">
-                                    <div class="create-account-link-1">
-                                        <span>Don't have an account?</span>
-                                        <a class="crt-acc" href="../Registration/registration.html"> Create an account</a>
-                                    </div>
-                                    <!-- <div class="create-account-link-2">
-                                    <div class="mt-3 text-center">
-                                        <span>Don't have an account?</span>
-                                    </div>
-                                    <div class="mt-1 text-center">
-                                        <a class="crt-acc" href="create-account.html"> Create an account</a>
-                                    </div>
-        
-                                    </div> -->
 
-                                <div class=" text-center mt-5 privacy">
+
+                                <div class=" text-center mt-5">
                                     <p>Privacy Policy</p>
                                 </div>
                             </div>
