--- a/MVC/Views/Home/Registration.cshtml
+++ b/MVC/Views/Home/Registration.cshtml
@@ -1,21 +1,21 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
+    <title>Registration</title>
 
-    <link rel="shortcut icon" href="../CI Platform Assets/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="~/Images/logo.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../login/login.css">
+    <link rel="stylesheet" href="~/css/Registration.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css"
-        integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+          integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -23,15 +23,16 @@
         <div class="row ">
             <div class="custom-slider col-lg-8 col-md-12 col-sm-12 col-xs-12">
                 <div class=" img-container  ">
-                    <img src="/CI Platform Assets/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                        class="img-fluid">
+                    <img src="~/Images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                         class="img-fluid">
 
                     <div class="linear-grad"></div>
                     <div class="poster-content mb-5 ">
 
                         <p class="title"> Sed ut perspiciatis unde omnis iste natus voluptatem.</p><br>
 
-                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut
                             labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -42,15 +43,16 @@
                 </div>
 
                 <div class=" img-container  ">
-                    <img src="/CI Platform Assets/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                        class="img-fluid">
+                     <img src="~/Images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                         class="img-fluid">
 
                     <div class="linear-grad"></div>
                     <div class="poster-content mb-5 ">
 
                         <p class="title"> Sed ut perspiciatis unde omnis iste natus voluptatem.</p><br>
 
-                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut
                             labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -61,15 +63,16 @@
                 </div>
 
                 <div class=" img-container  ">
-                    <img src="/CI Platform Assets/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
-                        class="img-fluid">
+                    <img src="~/Images/Grow-Trees-On-the-path-to-environment-sustainability-login.png"
+                         class="img-fluid">
 
                     <div class="linear-grad"></div>
                     <div class="poster-content mb-5 ">
 
                         <p class="title"> Sed ut perspiciatis unde omnis iste natus voluptatem.</p><br>
 
-                        <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+                        <p class="description">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                             tempor incididunt ut
                             labore
                             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
@@ -86,35 +89,52 @@
                 <div class="row justify-content-center">
                     <div class="col-12 col-lg-9 col-md-9 col-sm-9 col-xs-9">
                         <form>
+
+                            <div class="mb-3 ">
+                                <label for="exampleInputEmail1" class="form-label">First Name</label>
+                                <input type="text" class="form-control" id="exampleInputFirstname"
+                                       aria-describedby="emailHelp">
+                            </div>
+
+                            <div class="mb-3 ">
+                                <label for="exampleInputEmail1" class="form-label">Last Name</label>
+                                <input type="text" class="form-control" id="exampleInputLastname"
+                                       aria-describedby="emailHelp">
+                            </div>
+
+                            <div class="mb-3 ">
+                                <label for="exampleInputEmail1" class="form-label">Phone Number</label>
+                                <input type="number" class="form-control" id="exampleInputnumber"
+                                       aria-describedby="emailHelp">
+                            </div>
+
+
                             <div class="mb-3 ">
                                 <label for="exampleInputEmail1" class="form-label">Email address</label>
                                 <input type="email" class="form-control" id="exampleInputEmail1"
-                                    aria-describedby="emailHelp">
+                                       aria-describedby="emailHelp">
                             </div>
                             <div class="mb-3">
                                 <label for="exampleInputPassword1" class="form-label">Password</label>
                                 <input type="password" class="form-control" id="exampleInputPassword1">
-                                <button type="submit" class="btn btn-outline-warning mt-4">Login</button>
+
+                                <label for="exampleInputPassword1" class="form-label mt-3">Confirm Password</label>
+                                <input type="password" class="form-control" id="exampleInputPassword1">
+
+                                <button type="submit" class="btn btn-outline-warning mt-4">Register</button>
                                 <div class="text-center mt-3 forgot-pswd">
-                                    <a href="../forgot-password/forgot_password.html">Lost your password?</a> 
+                                    <a asp-controller="Home" asp-action="ForgotPassword">Lost your password?</a>
                                 </div>
 
                                 <div class="text-center mt-2">
                                     <div class="create-account-link-1">
-                                        <span>Don't have an account?</span>
-                                        <a class="crt-acc" href="../Registration/registration.html"> Create an account</a>
+                                        <span>Already Registered ?</span>
+                                        <a class="crt-acc" asp-controller="Home" asp-action="Index"> Login now</a>
                                     </div>
-                                    <!-- <div class="create-account-link-2">
-                                    <div class="mt-3 text-center">
-                                        <span>Don't have an account?</span>
-                                    </div>
-                                    <div class="mt-1 text-center">
-                                        <a class="crt-acc" href="create-account.html"> Create an account</a>
-                                    </div>
-        
-                                    </div> -->
 
-                                <div class=" text-center mt-5 privacy">
+                                </div>
+
+                                <div class=" text-center privacy">
                                     <p>Privacy Policy</p>
                                 </div>
                             </div>
@@ -131,15 +151,15 @@
 </body>
 
 <script src="https://code.jquery.com/jquery-3.6.3.min.js"
-    integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
+        integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"></script>
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
-    integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js"
+        integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script>
     $('.custom-slider').slick({
